--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,37 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
+    "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  font-size: 14px;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+a {
+  cursor: pointer;
+  text-decoration: none;
+  color: #40a3d3 !important;
+}
+a:link {
+  color: #40a3d3 !important;
+  text-decoration: none;
+}
+a:visited {
+  color: #40a3d3 !important;
+  text-decoration: none;
+}
+a:hover {
+  color: #40a3d3 !important;
+  text-decoration: none;
+}
+a:active {
+  color: #40a3d3 !important;
+  text-decoration: none;
 }
