--- a/client/src/pages/news-list/index.css
+++ b/client/src/pages/news-list/index.css
@@ -1,3 +1,44 @@
 .news-list-container {
-    height: 100vh;
+  height: 100vh;
+}
+
+.news-item-row {
+  padding: 10px;
+  background-color: #000;
+  color: #fff;
+  height: 80px;
+  border: 1px solid #ccc;
+  display: flex;
+}
+
+.news-image img {
+  width: 150px;
+  height: 80px;
+}
+.news-image {
+  width: 150px;
+}
+
+.news-content {
+  padding: 0 10px;
+}
+
+.news-description, .news-title {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.news-author {
+  font-style: italic;
+  position: absolute;
+  bottom: 24px;
+  font-size: 12px;
+}
+
+.published-at {
+  font-style: italic;
+  position: absolute;
+  bottom: 8px;
+  font-size: 12px;
 }
