--- a/client/src/pages/news-list/index.css
+++ b/client/src/pages/news-list/index.css
@@ -1,5 +1,5 @@
 .news-list-container {
-  height: 100vh;
+  height: 80vh;
 }
 
 .news-item-row {
@@ -23,7 +23,8 @@
   padding: 0 10px;
 }
 
-.news-description, .news-title {
+.news-description,
+.news-title {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -41,4 +42,20 @@
   position: absolute;
   bottom: 8px;
   font-size: 12px;
+}
+
+.filter-key-keyword-container {
+  width: 100%;
+  height: 20vh;
+  position: relative;
+}
+.filter-key-keyword {
+  width: 80%;
+  color: #fff;
+  background-color: #000;
+  padding: 10px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
